# Electricity_consumption_predictor

./: consumption_forecasting.ipynb  exploratory_data_analysis.ipynb  forecasting_model_comparison.ipynb  model_reports.typ  pyproject.toml  report.typ
artifacts/: baseline_ml_pipeline.joblib
course material/: Chapter1_FundamentalsOfTimeSeries.ipynb  Chapter2_Forecasting_PrinciplesAndMethods.ipynb  Chapter3_StatisticalModelsForTimeSeries.ipynb  Chapter4_MachineLearningForTimeSeries.ipynb
